# sneakyengine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build-cl-windows.yml  cmake-build-gcc-ubuntu.yml  cmake-multi-platform.yml
cmake/: BuildRules.cmake  CheckDependencies.cmake  Config.cmake  GetGTest.cmake  GetSDL3.cmake  Options.cmake  TestFunctions.cmake
doc/: CMakeLists.txt  Doxyfile  README.md
scripts/: run_tests.sh
src/: .#coordinates.cpp  CMakeLists.txt  colour.cpp  colour.h  coordinates.cpp  coordinates.hpp  engine.cpp  engine.h  engine.hpp  main.cpp  shape.cpp  shape.hpp
src/audio/: audio.hpp
src/common/: CMakeLists.txt  README.md
src/common/mod_server/: CMakeLists.txt  README.md  module_server.cpp  server.hpp
src/common/mod_server/impl/: CMakeLists.txt
src/common/mod_server/impl/message/default/: CMakeLists.txt  message_impl.cpp  message_impl.hpp
src/common/mod_server/impl/server/default/: CMakeLists.txt  server_impl.cpp  server_impl.hpp
src/common/mod_server/libs/subscr_admin/: CMakeLists.txt  subscr_admin.cpp  subscr_admin.hpp
src/display/: CMakeLists.txt  README.md  display.cpp  display.hpp  display_sdl_impl.cpp  display_sdl_impl.hpp
src/display/display/: CMakeLists.txt  display.cpp  display.hpp  display_sdl_impl.cpp  display_sdl_impl.hpp
src/display/display/impl/: CMakeLists.txt
src/display/display/impl/SDL/: CMakeLists.txt
src/display/display/impl/SDL/SDL3/: CMakeLists.txt  display_sdl_impl.cpp  display_sdl_impl.hpp
src/display/process_impl/: CMakeLists.txt  README.md  display_proc_impl.cpp  display_proc_impl.hpp
src/input/: CMakeLists.txt
src/input/event/: CMakeLists.txt  event.cpp  event.hpp  eventhandler_impl.cpp  eventhandler_impl.hpp
src/input/input/: CMakeLists.txt  input.cpp  input.hpp
src/input/input/impl/SDL/: CMakeLists.txt  inputpoller_sdl_impl.cpp  inputpoller_sdl_impl.hpp
src/input/process_input/: CMakeLists.txt  event_proc.cpp  event_proc.hpp
src/logging/: CMakeLists.txt  ilog_instance.hpp  logging.cpp  logging.hpp
src/logging/impl/: CMakeLists.txt
src/logging/impl/SDL/: CMakeLists.txt
src/logging/impl/SDL/SDL3/: CMakeLists.txt  log_sdl_impl.hpp
src/networking/: README.md  networking.hpp
src/object/: README.md  object.hpp
src/physics/: physics.hpp
src/process/: CMakeLists.txt  README.md  process.cpp  process.hpp
src/process/process/: CMakeLists.txt  README.md  process.cpp  process.hpp  processmanager_impl.cpp  processmanager_impl.hpp
src/process/process/impl/: CMakeLists.txt
src/process/process/impl/default/: CMakeLists.txt  processmanager_fact_impl.cpp  processmanager_fact_impl.hpp  processmanager_impl.cpp  processmanager_impl.hpp
src/process/process/libs/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.hpp
src/process/process/libs/threadpool/: CMakeLists.txt  threadpool.cpp  threadpool.hpp
src/process/process/libs/threadpool/impl/: CMakeLists.txt
src/process/process/libs/threadpool/impl/default/: CMakeLists.txt  threadpool_impl.cpp  threadpool_impl.hpp
src/process/process/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.hpp  scheduler_fact_impl.cpp  scheduler_fifo.hpp
src/process/process/threadpool/: CMakeLists.txt  threadpool.cpp  threadpool.hpp  threadpool_impl.cpp  threadpool_impl.hpp
src/process/process_impl/: CMakeLists.txt  default_proc_impl.hpp  default_proc_impl.hpp   display_proc_impl.cpp  display_proc_impl.hpp
src/process/scheduler/: CMakeLists.txt  scheduler.hpp  scheduler_fact_impl.hpp  scheduler_fifo.cpp
src/sci/: sci.hpp
src/utils/: CMakeLists.txt  hash.hpp  time.hpp  types.hpp
test/: CMakeLists.txt  coordinates_tst.cpp  coordinates_tst.hpp  main.cpp  shape_tst.cpp  shape_tst.hpp  test_engine.cpp  utils.cpp  utils.hpp
test/mocks/: mock_process.hpp  mock_subscriber.hpp
test/mod_server/: test_message.cpp  test_subscr_admin.cpp
test/process/: test_processmanager.cpp  test_scheduler.cpp  test_threadpool.cpp
test/utils/: test_hash.cpp
